src/objects/FedRAMP_Stage_Activity__c.object
<CustomObject>
    <description>Stage Activity object for FedRAMP application to track Activities and Events on Package Stages</description>
    <fields>
        <fullName>Actors__c</fullName>
        <label>Actors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PMO</fullName>
                </value>
                <value>
                    <fullName>ISSO</fullName>
                </value>
                <value>
                    <fullName>JAB</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>3PAO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Types__c</fullName>
        <label>Event Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Interview</fullName>
                </value>
                <value>
                    <fullName>Kick-Off</fullName>
                </value>
                <value>
                    <fullName>Architectural Briefing</fullName>
                </value>
                <value>
                    <fullName>SAR Briefing</fullName>
                </value>
                <value>
                    <fullName>Exec Meeting</fullName>
                </value>
                <value>
                    <fullName>Misc Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package_Stage__c</fullName>
        <label>Package Stage</label>
        <referenceTo>FedRAMP_Package_Stage__c</referenceTo>
        <relationshipLabel>Stage Activities</relationshipLabel>
        <relationshipName>Stage_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_of_Days__c</fullName>
        <formula>CASE(MOD( Start_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( End_Date__c - Start_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stage Activity</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Stage Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Activities</pluralLabel>
    <recordTypes>
        <fullName>Stage_Activities</fullName>
        <active>true</active>
        <description>Activities on Stages</description>
        <label>Stage Activities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stage_Events</fullName>
        <active>true</active>
        <description>Events on Stages</description>
        <label>Stage Events</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_End_Date_on_Activity</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $RecordType.DeveloperName == &quot;Stage_Activities&quot;, ISBLANK( End_Date__c ), ISPICKVAL( Status__c , &quot;Completed&quot;))</errorConditionFormula>
        <errorMessage>End Date must be filled in and Status set to “Complete” to save this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Status_on_Activity</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $RecordType.DeveloperName == &quot;Stage_Activities&quot;, NOT(ISBLANK(End_Date__c)), NOT(ISPICKVAL(Status__c , &quot;Completed&quot;)))</errorConditionFormula>
        <errorMessage>End Date must be filled in and Status set to “Complete” to save this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_cannot_be_after_today</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_cannot_be_before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Date_cannot_be_after_today</fullName>
        <active>true</active>
        <errorConditionFormula>Event_Date__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Event_Date__c</errorDisplayField>
        <errorMessage>Event Date cannot be a future date</errorMessage>
    </validationRules>
</CustomObject>